force-app/main/default/objects/ConnectionMessage2__e/ConnectionMessage2__e.object-meta.xml
<CustomObject>
    <label>ConnectionMessage2</label>
    <pluralLabel>ConnectionMessage2</pluralLabel>
</CustomObject>