force-app/main/default/objects/ConnectionMessage2__e/fields/MsgType__c.field-meta.xml
<CustomField>
    <fullName>MsgType__c</fullName>
    <label>MsgType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>