force-app/main/default/objects/ConnectionMessage2__e/fields/receivedId__c.field-meta.xml
<CustomField>
    <fullName>receivedId__c</fullName>
    <label>receivedId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>