force-app/main/default/objects/ConnectionMessage2__e/fields/senderId__c.field-meta.xml
<CustomField>
    <fullName>senderId__c</fullName>
    <label>senderId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>